--- a/frontend.html
+++ b/frontend.html
@@ -39,7 +39,7 @@
     <div class="container">
 <!--Begin body here --> 
 <h5><a href='https://wirex.workable.com/j/9720E83944'>Wirex - Jobs: Front End Team Lead - Apply online</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Kyiv Kyiv</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
 <h5><a href='https://jobs.lever.co/newfrontinsurance/d55fa37d-3131-4c12-9dda-13ceaea76c02'>Newfront Insurance - Backend Engineer</a></h5> 
@@ -110,7 +110,7 @@
 <p><span class="badge badge-light">Bucharest, Romania</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<h5><a href='https://qualitest-1.workable.com/j/841DD86077'>QualiTest - Jobs: R&D Frontend Developer - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://qualitest-1.workable.com/j/841DD86077'>QualiTest - Jobs: R&D Frontend Developer - Apply online</a></h5> 
 <p><span class="badge badge-light">Bucharest, Romania</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
@@ -135,7 +135,7 @@
 <p>3 days ago ... We are looking for a Front-End Developer who is motivated to combine the art of 
 design with the art of programming. You will be working on game-changing?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://hatcherygmbh.recruitee.com/o/praktikant-frontend-developer-mwx'>Praktikant Frontend Developer (m/w/x) - hatchery GmbH</a></h5> 
+<h5><a href='https://hatcherygmbh.recruitee.com/o/praktikant-frontend-developer-mwx'>Praktikant Frontend Developer (m/w/x) - hatchery GmbH</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>vor 4 Tagen ... Das hatchery Team sucht zum n?chstm?glichen Zeitpunkt einen... Praktikant 
 Frontend Developer (m/w/x). JavaScript, HTML und CSS sind Dein Revier?</p>
@@ -152,7 +152,7 @@ Frontend Developer (m/w/x). JavaScript, HTML und CSS sind Dein Revier?</p>
 <p><span class="badge badge-light"></span></p>
 <p>Jul 18, 2019 ... Apply online for the job of JR Front-end Developer at Docplanner / Doctoralia.</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.workable.com/j/3A7E14AB66'>blubolt eCommerce - Jobs: Frontend Developers - Shopify ...</a></h5> 
+<h5><a href='https://www.workable.com/j/3A7E14AB66'>blubolt eCommerce - Jobs: Frontend Developers - Shopify ...</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>5 days ago ... This is an exciting role for a driven frontend developer with eCommerce 
 experience at an agency level. We are specifically looking for developers that 
@@ -216,7 +216,7 @@ have?...</p>
 apps. Since our launch in May 2012, we've expanded into 19 major cities with 
 over?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/servicetitan/jobs/1792879'>Job Application for Software Engineer, Front End at ServiceTitan</a></h5> 
+<h5><a href='https://boards.greenhouse.io/servicetitan/jobs/1792879'>Job Application for Software Engineer, Front End at ServiceTitan</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>3 days ago ... This is an exciting role for an engineer to come in and develop the major UI 
 features in a rapidly growing startup. We build for perfection, use the most 
@@ -275,7 +275,7 @@ built as a Single Page App using Angular (2+) and React application. We are?...<
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-07-27</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/twitch/jobs/4359447002'>Job Application for Frontend Engineer - Extensions (Discovery & Management)  at Twitch</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/twitch/jobs/4359447002'>Job Application for Frontend Engineer - Extensions (Discovery & Management)  at Twitch</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -287,7 +287,7 @@ built as a Single Page App using Angular (2+) and React application. We are?...<
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='https://careersatnutmeg.workable.com/j/55CE9E0DDD'>Nutmeg - Jobs: Senior Front-End Developer - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careersatnutmeg.workable.com/j/55CE9E0DDD'>Nutmeg - Jobs: Senior Front-End Developer - Apply online</a></h5> 
 <p><span class="badge badge-light">London, England, United Kingdom</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -340,7 +340,7 @@ machine learning alongside financial engineering to continuously turn data into?
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://medbridge.applytojob.com/apply/uuZmRcu6Ak/Front-End-Software-Engineer-II-Seattle-WA'>Front End Software Engineer II (Seattle, WA) - MedBridge - Career Page</a></h5> 
+<h5><a href='http://medbridge.applytojob.com/apply/uuZmRcu6Ak/Front-End-Software-Engineer-II-Seattle-WA'>Front End Software Engineer II (Seattle, WA) - MedBridge - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -356,7 +356,7 @@ machine learning alongside financial engineering to continuously turn data into?
 <p><span class="badge badge-light">Chennai</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/retailindia/jobs/1765502'>Job Application for Senior Front-End Engineer at Endurance International Group - India</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/retailindia/jobs/1765502'>Job Application for Senior Front-End Engineer at Endurance International Group - India</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -387,7 +387,7 @@ generation web and mobile components and interfaces. Develop new ways of?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/labineassociates/job/7sx4k69rsmsjrryggdifk17qfh'>Sitecore Front End Developer (Hollywood, Florida) | Job Opportunities</a></h5> 
+<h5><a href='https://jobs.crelate.com/portal/labineassociates/job/7sx4k69rsmsjrryggdifk17qfh'>Sitecore Front End Developer (Hollywood, Florida) | Job Opportunities</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -417,7 +417,7 @@ published: 19.06.2019). Apply now or check the other available jobs.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<h5><a href='https://careers.jobscore.com/careers/sojern/jobs/lead-frontend-developer-afpg9mRKer6BKGaKld2Sj6'>Lead Frontend Developer #1072 job at Sojern in Istanbul, Turkey, powered by JobScore</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careers.jobscore.com/careers/sojern/jobs/lead-frontend-developer-afpg9mRKer6BKGaKld2Sj6'>Lead Frontend Developer #1072 job at Sojern in Istanbul, Turkey, powered by JobScore</a></h5> 
 <p><span class="badge badge-light">Istanbul Istanbul</span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
